--- a/CSS/club.css
+++ b/CSS/club.css
@@ -200,6 +200,9 @@ header{
   grid-column: 2/3;
 }
 @media(max-width:766px){
+  #crsname{
+    font-size: 35px;
+  }
   .imagecont{
     width: 100%;
   }
@@ -252,6 +255,9 @@ header{
   }
   .age{
     font-size: 12px;
+  }
+  #crsname{
+    font-size: 25px;
   }
 }
 @media(max-width:400px){
